Fix song card overflow observer and last card margin bottom

--- a/src/public/home/styles/song-card.css
+++ b/src/public/home/styles/song-card.css
@@ -38,6 +38,10 @@
 	user-select: none;
 }
 
+.song-card:last-of-type {
+	margin-bottom: 0.25em;
+}
+
 /* song cards overlay on hover/active */
 .song-card {
 	cursor: pointer;
